--- a/index.html
+++ b/index.html
@@ -3,24 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
-    <!-- Navbar -->
     <nav class="navbar">
-        <div class="nav-logo">YourSite</div>
+        <div class="nav-logo">SecurityMax</div>
         <ul class="nav-links">
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="setup.html">Setup</a></li>
-            <li><a href="support.html">Support</a></li>
-            <li><a href="dashboard.html">Dashboard</a></li>
+            <li><a href="/" class="active">Home</a></li>
+            <li><a href="/setup.html">Setup</a></li>
+            <li><a href="/support.html">Support</a></li>
+            <li><a href="/dashboard.html">Dashboard</a></li>
         </ul>
     </nav>
 
-    <!-- Blank Content Area -->
     <main></main>
 
-    <script src="js/script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
