--- a/support.html
+++ b/support.html
@@ -7,18 +7,18 @@
 </head>
 <body>
 
-    <nav class="navbar">
-        <div class="nav-logo">SecurityMax</div>
-        <ul class="nav-links">
-            <li><a href="/">Home</a></li>
-            <li><a href="/setup.html">Setup</a></li>
-            <li><a href="/support.html" class="active">Support</a></li>
-            <li><a href="/dashboard.html">Dashboard</a></li>
-        </ul>
-    </nav>
+<nav class="navbar">
+    <a href="/" class="nav-logo">SecurityMax</a>
+    <ul class="nav-links">
+        <li><a href="/">Home</a></li>
+        <li><a href="/setup.html">Setup</a></li>
+        <li><a href="/support.html" class="active">Support</a></li>
+        <li><a href="/dashboard.html">Dashboard</a></li>
+    </ul>
+</nav>
 
-    <main></main>
+<main></main>
 
-    <script src="/js/script.js"></script>
+<script src="/js/script.js"></script>
 </body>
 </html>
