--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
 
 <nav class="navbar">
-    <a href="/" class="nav-logo">SecurityMax</a>
+    <a href="/" class="nav-logo">
+    <img src="/assets/logo.png" alt="SecurityMax Logo">
+</a>
     <ul class="nav-links">
         <li><a href="/" class="active">Home</a></li>
         <li><a href="/setup.html">Setup</a></li>
@@ -22,3 +24,4 @@
 <script src="/js/script.js"></script>
 </body>
 </html>
+
