--- a/setup.html
+++ b/setup.html
@@ -8,7 +8,10 @@
 <body>
 
 <nav class="navbar">
-    <a href="/" class="nav-logo">SecurityMax</a>
+    <a href="/" class="nav-logo">
+        <img src="/assets/logo.png" alt="SecurityMax Logo">
+    </a>
+
     <ul class="nav-links">
         <li><a href="/">Home</a></li>
         <li><a href="/setup.html" class="active">Setup</a></li>
@@ -19,6 +22,5 @@
 
 <main></main>
 
-<script src="/js/script.js"></script>
 </body>
 </html>
