--- a/privacy.html
+++ b/privacy.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Privacy Policy</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
-    <nav class="navbar">
-        <div class="nav-logo">YourSite</div>
-    </nav>
+<nav class="navbar">
+    <a href="/" class="nav-logo">
+        <img src="/assets/logo.png" alt="SecurityMax Logo">
+    </a>
+</nav>
 
-    <main></main>
+<main></main>
 
 </body>
 </html>
