--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <nav class="navbar">
     <a href="/" class="nav-logo">
-        <img src="/assets/logo.png" alt="SecurityMax Logo">
+        <img src="/assets/logo.png" alt="Security Max Logo">
+        <span>Security Max</span>
     </a>
 
     <ul class="nav-links">
