--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 <body>
 
 <nav class="navbar">
-    <a href="/" class="nav-logo">
-        <img src="/assets/logo.png" alt="Security Max Logo">
-        <span>Security Max</span>
-    </a>
+    <a href="/" class="nav-logo">Security Max</a>
 
     <ul class="nav-links">
         <li><a href="/" class="active">Home</a></li>
