--- a/setup.html
+++ b/setup.html
@@ -8,9 +8,7 @@
 <body>
 
 <nav class="navbar">
-    <a href="/" class="nav-logo">
-        <img src="/assets/logo.png" alt="SecurityMax Logo">
-    </a>
+    <a href="/" class="nav-logo">Security Max</a>
 
     <ul class="nav-links">
         <li><a href="/">Home</a></li>
