--- a/terms.html
+++ b/terms.html
@@ -8,9 +8,7 @@
 <body>
 
 <nav class="navbar">
-    <a href="/" class="nav-logo">
-        <img src="/assets/logo.png" alt="SecurityMax Logo">
-    </a>
+    <a href="/" class="nav-logo">Security Max</a>
 </nav>
 
 <main></main>
