--- a/index.html
+++ b/index.html
@@ -18,7 +18,21 @@
     </ul>
 </nav>
 
-<main></main>
+<main class="home-hero">
+    <div class="hero-content">
+        <h1>Security Max Bot</h1>
+        <p>
+            Protect your discord server from Raiders, Nukers or any type of Attacks
+        </p>
+
+        <a
+            href="https://discord.com/oauth2/authorize?client_id=1457942798644019349&permissions=8&integration_type=0&scope=bot"
+            class="hero-button"
+        >
+            Add Security Max Bot
+        </a>
+    </div>
+</main>
 
 <script src="/js/script.js"></script>
 </body>
