--- a/index.html
+++ b/index.html
@@ -31,6 +31,22 @@
         >
             Add Security Max Bot
         </a>
+
+        <!-- Announcement Card -->
+        <div class="announcement-card">
+            <div class="announcement-badge">NEW ANNOUNCEMENT</div>
+            <div class="announcement-date">January 7, 2026</div>
+
+            <h2>
+                A New Journey Of <strong>Security Max Bot</strong>
+            </h2>
+
+            <p>
+                We are very excited to announce that
+                <strong>Security Max Bot</strong> is going to launch
+                <strong>soon</strong>.
+            </p>
+        </div>
     </div>
 </main>
 
