--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
         >
             Add Security Max Bot
         </a>
+    </div>
 
-        <!-- Announcement Card -->
+    <!-- CENTERED ANNOUNCEMENT -->
+    <div class="announcement-wrapper">
         <div class="announcement-card">
             <div class="announcement-badge">NEW ANNOUNCEMENT</div>
             <div class="announcement-date">January 7, 2026</div>
