--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </nav>
 
 <main class="home-hero">
+    <!-- HERO -->
     <div class="hero-content">
         <h1>Security Max Bot</h1>
         <p>
@@ -33,7 +34,7 @@
         </a>
     </div>
 
-    <!-- CENTERED ANNOUNCEMENT -->
+    <!-- ANNOUNCEMENT -->
     <div class="announcement-wrapper">
         <div class="announcement-card">
             <div class="announcement-badge">NEW ANNOUNCEMENT</div>
@@ -48,6 +49,18 @@
                 <strong>Security Max Bot</strong> is going to launch
                 <strong>soon</strong>.
             </p>
+        </div>
+    </div>
+
+    <!-- FEATURES -->
+    <div class="features-wrapper">
+        <div class="features-grid">
+            <div class="feature-card">AntiRaid</div>
+            <div class="feature-card">AntiNuke</div>
+            <div class="feature-card">AutoModeration</div>
+            <div class="feature-card">Verification</div>
+            <div class="feature-card">Monster Mode</div>
+            <div class="feature-card">Anti Bots</div>
         </div>
     </div>
 </main>
