--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </nav>
 
 <main class="home-hero">
+
     <!-- HERO -->
     <div class="hero-content">
         <h1>Security Max Bot</h1>
@@ -54,6 +55,8 @@
 
     <!-- FEATURES -->
     <div class="features-wrapper">
+        <h2 class="features-title">Features</h2>
+
         <div class="features-grid">
             <div class="feature-card">AntiRaid</div>
             <div class="feature-card">AntiNuke</div>
@@ -61,8 +64,16 @@
             <div class="feature-card">Verification</div>
             <div class="feature-card">Monster Mode</div>
             <div class="feature-card">Anti Bots</div>
+
+            <div class="feature-card">Logs</div>
+            <div class="feature-card">Whitelisting</div>
+            <div class="feature-card">Auto Notifier</div>
+            <div class="feature-card">Instant Action</div>
+            <div class="feature-card">No Bugs</div>
+            <div class="feature-card">No Possible Bypasses</div>
         </div>
     </div>
+
 </main>
 
 <script src="/js/script.js"></script>
