--- a/index.html
+++ b/index.html
@@ -53,10 +53,13 @@
         </div>
     </div>
 
+    <!-- FEATURES TITLE -->
+    <div class="features-title-wrapper">
+        <h2 class="features-title">Features</h2>
+    </div>
+
     <!-- FEATURES -->
     <div class="features-wrapper">
-        <h2 class="features-title">Features</h2>
-
         <div class="features-grid">
             <div class="feature-card">AntiRaid</div>
             <div class="feature-card">AntiNuke</div>
