--- a/server.html
+++ b/server.html
@@ -16,8 +16,51 @@
       font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
     }
 
+    /* ================= TOP BAR ================= */
+
+    .topbar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 64px;
+      padding: 0 32px;
+      background: rgba(2, 6, 23, 0.75);
+      backdrop-filter: blur(12px);
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      z-index: 100;
+      border-bottom: 1px solid rgba(255,255,255,0.05);
+    }
+
+    .topbar-logo {
+      font-size: 18px;
+      font-weight: 700;
+      color: #ffffff;
+      text-decoration: none;
+    }
+
+    .home-btn {
+      padding: 10px 18px;
+      background: rgba(255,255,255,0.08);
+      border-radius: 10px;
+      color: #fff;
+      font-weight: 600;
+      text-decoration: none;
+      transition: background 0.15s ease, transform 0.15s ease;
+    }
+
+    .home-btn:hover {
+      background: rgba(255,255,255,0.15);
+      transform: translateY(-1px);
+    }
+
+    /* ================= CENTER SCREENS ================= */
+
     .center {
-      height: 100vh;
+      height: calc(100vh - 64px);
+      padding-top: 64px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -57,10 +100,10 @@
       box-shadow: 0 14px 30px rgba(88,101,242,0.55);
     }
 
-    /* SERVER PANEL */
+    /* ================= SERVER PANEL ================= */
 
     .panel {
-      padding: 40px;
+      padding: 96px 40px 40px;
     }
 
     .server-header {
@@ -90,7 +133,14 @@
     }
   </style>
 </head>
+
 <body>
+
+  <!-- TOP BAR -->
+  <div class="topbar">
+    <a href="/" class="topbar-logo">Security Max</a>
+    <a href="/" class="home-btn">Home</a>
+  </div>
 
   <!-- VERIFYING -->
   <div id="verify" class="center">
@@ -106,14 +156,13 @@
     <a id="inviteLink" class="btn">Invite Security Max</a>
   </div>
 
-  <!-- SERVER PANEL (BOT IN SERVER) -->
+  <!-- SERVER PANEL -->
   <div id="panel" class="panel" style="display:none;">
     <div class="server-header">
       <img id="serverIcon" alt="Server Icon">
       <h1 id="serverName">Server</h1>
     </div>
 
-    <!-- Intentionally empty for now -->
     <div class="empty-area">
       Server settings will appear here.
     </div>
