--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Security Max</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -22,9 +22,17 @@
 
     <!-- HERO -->
     <div class="hero-content">
-        <h1>Security Max Bot</h1>
+        <h1>
+            Security <span class="hero-highlight">Max</span> Bot
+        </h1>
+
         <p>
-            Protect your discord server from Raiders, Nukers or any type of Attacks
+            Protect your Discord server from
+            <strong>Raiders</strong>,
+            <strong>Nukers</strong>,
+            and all types of
+            <strong>Attacks</strong>
+            — automatically and instantly.
         </p>
 
         <a
