--- a/server.html
+++ b/server.html
@@ -47,12 +47,6 @@
       color: #fff;
       font-weight: 600;
       text-decoration: none;
-      transition: background 0.15s ease, transform 0.15s ease;
-    }
-
-    .home-btn:hover {
-      background: rgba(255,255,255,0.15);
-      transform: translateY(-1px);
     }
 
     /* ================= VERIFY / INVITE ================= */
@@ -89,7 +83,6 @@
       border-radius: 10px;
       text-decoration: none;
       font-weight: 600;
-      font-size: 16px;
     }
 
     /* ================= DASHBOARD LAYOUT ================= */
@@ -123,12 +116,6 @@
       border-radius: 8px;
       font-weight: 600;
       cursor: pointer;
-      transition: background 0.15s ease, color 0.15s ease;
-    }
-
-    .nav-item:hover {
-      background: rgba(255,255,255,0.08);
-      color: #fff;
     }
 
     .nav-item.active {
@@ -150,88 +137,73 @@
       display: block;
     }
 
-    .section h2 {
-      margin-top: 0;
-    }
-
-    /* ================= ENABLE SETTING ================= */
+    /* ================= GENERAL SETTINGS ================= */
 
     .setting-row {
       display: flex;
-      justify-content: space-between;
       align-items: center;
-      padding: 18px 22px;
-      background: rgba(255,255,255,0.05);
-      border-radius: 12px;
-      margin-top: 20px;
-      max-width: 520px;
+      gap: 20px;
+      margin-top: 24px;
     }
 
-    .setting-label {
-      font-size: 18px;
-      font-weight: 600;
-    }
-
-    .toggle-btn {
-      padding: 10px 28px;
+    .toggle {
+      width: 56px;
+      height: 30px;
       border-radius: 999px;
-      font-weight: 800;
+      background: #374151;
       border: none;
+      position: relative;
       cursor: pointer;
+    }
+
+    .toggle::after {
+      content: "";
+      position: absolute;
+      top: 3px;
+      left: 3px;
+      width: 24px;
+      height: 24px;
+      background: #fff;
+      border-radius: 50%;
       transition: 0.2s;
     }
 
-    .toggle-btn[data-state="off"] {
-      background: #374151;
-      color: #fff;
-    }
-
-    .toggle-btn[data-state="on"] {
+    .toggle.on {
       background: #22c55e;
-      color: #020617;
     }
 
-    /* ================= SAVE BAR ================= */
+    .toggle.on::after {
+      transform: translateX(26px);
+    }
 
-    .save-bar {
+    /* ================= SAVE POPUP ================= */
+
+    .save-popup {
       position: fixed;
       bottom: 24px;
       left: 50%;
-      transform: translateX(-50%);
+      transform: translateX(-50%) scale(0.95);
       background: #020617;
-      border: 1px solid #3b82f6;
-      padding: 14px 22px;
-      border-radius: 14px;
-      display: none;
-      align-items: center;
-      gap: 18px;
-      z-index: 9999;
-    }
-
-    .save-bar.show {
+      border: 1px solid #1e3a8a;
+      padding: 14px 18px;
+      border-radius: 12px;
       display: flex;
+      gap: 12px;
+      align-items: center;
+      opacity: 0;
+      pointer-events: none;
+      transition: 0.2s;
+      z-index: 999;
     }
 
-    .save-actions button {
-      padding: 8px 16px;
-      border-radius: 8px;
-      border: none;
-      font-weight: 700;
-      cursor: pointer;
+    .save-popup.show {
+      opacity: 1;
+      pointer-events: auto;
+      transform: translateX(-50%) scale(1);
     }
 
-    .save-btn {
-      background: #22c55e;
-      color: #020617;
-    }
-
-    .discard-btn {
-      background: #ef4444;
-      color: #ffffff;
-    }
-
-    .save-bar.shake {
-      animation: shake 0.3s;
+    .save-popup.shake {
+      animation: shake 0.4s;
     }
 
     @keyframes shake {
@@ -240,6 +212,24 @@
       50% { transform: translateX(-50%) translateX(6px); }
       75% { transform: translateX(-50%) translateX(-6px); }
       100% { transform: translateX(-50%) translateX(0); }
+    }
+
+    .save-popup button {
+      padding: 6px 12px;
+      border-radius: 6px;
+      border: none;
+      cursor: pointer;
+      font-weight: 600;
+    }
+
+    #saveBtn {
+      background: #22c55e;
+      color: #000;
+    }
+
+    #discardBtn {
+      background: #374151;
+      color: #fff;
     }
   </style>
 </head>
@@ -252,21 +242,21 @@
     <a href="/" class="home-btn">Home</a>
   </div>
 
-  <!-- VERIFYING -->
+  <!-- VERIFY -->
   <div id="verify" class="center">
     <div class="spinner"></div>
     <h2>Verifying server…</h2>
     <p>Please wait</p>
   </div>
 
-  <!-- BOT NOT IN SERVER -->
+  <!-- INVITE -->
   <div id="invite" class="center" style="display:none;">
     <h2>Security Max is not in this server</h2>
     <p>Add the bot to manage this server</p>
     <a id="inviteLink" class="btn">Invite Security Max</a>
   </div>
 
-  <!-- SERVER PANEL -->
+  <!-- PANEL -->
   <div id="panel" class="panel" style="display:none;">
     <div class="layout">
 
@@ -285,16 +275,12 @@
 
       <!-- CONTENT -->
       <main class="content">
-
-        <!-- GENERAL -->
         <section id="general" class="section active">
           <h2>General</h2>
-          <p>General server settings will appear here.</p>
 
-          <!-- ENABLE SETTING -->
           <div class="setting-row">
-            <span class="setting-label">Enable</span>
-            <button class="toggle-btn" id="enableToggle" data-state="off">OFF</button>
+            <span>Enable</span>
+            <button id="enableToggle" class="toggle"></button>
           </div>
         </section>
 
@@ -306,70 +292,33 @@
         <section id="logs" class="section"><h2>Logs</h2></section>
         <section id="antispam" class="section"><h2>AntiSpam</h2></section>
         <section id="whitelist" class="section"><h2>WhiteList</h2></section>
-
       </main>
+
     </div>
   </div>
 
-  <!-- SAVE BAR -->
-  <div class="save-bar" id="saveBar">
-    <span>You have unsaved changes</span>
-    <div class="save-actions">
-      <button class="save-btn" id="saveBtn">Save</button>
-      <button class="discard-btn" id="discardBtn">Discard</button>
-    </div>
+  <!-- SAVE POPUP -->
+  <div id="savePopup" class="save-popup">
+    <span>Save changes?</span>
+    <button id="saveBtn">Save</button>
+    <button id="discardBtn">Discard</button>
   </div>
 
   <!-- EXISTING JS -->
   <script src="/js/server.js"></script>
 
-  <!-- EXTENDED LOGIC (ADD-ONLY) -->
+  <!-- SIDEBAR LOGIC -->
   <script>
-    let dirty = false;
-    let enableState = false;
+    const navItems = document.querySelectorAll(".nav-item");
+    const sections = document.querySelectorAll(".section");
 
-    const toggle = document.getElementById("enableToggle");
-    const saveBar = document.getElementById("saveBar");
-    const saveBtn = document.getElementById("saveBtn");
-    const discardBtn = document.getElementById("discardBtn");
+    navItems.forEach(btn => {
+      btn.addEventListener("click", () => {
+        navItems.forEach(b => b.classList.remove("active"));
+        sections.forEach(s => s.classList.remove("active"));
 
-    toggle.addEventListener("click", () => {
-      enableState = !enableState;
-      toggle.dataset.state = enableState ? "on" : "off";
-      toggle.textContent = enableState ? "ON" : "OFF";
-      dirty = true;
-      saveBar.classList.add("show");
-    });
-
-    discardBtn.addEventListener("click", () => {
-      enableState = false;
-      toggle.dataset.state = "off";
-      toggle.textContent = "OFF";
-      dirty = false;
-      saveBar.classList.remove("show");
-    });
-
-    saveBtn.addEventListener("click", async () => {
-      await fetch("/.netlify/functions/saveSettings", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-          guildId: window.currentGuildId,
-          enable: enableState
-        })
-      });
-      dirty = false;
-      saveBar.classList.remove("show");
-    });
-
-    // Extend sidebar logic (do not replace)
-    document.querySelectorAll(".nav-item").forEach(btn => {
-      btn.addEventListener("click", e => {
-        if (dirty) {
-          e.stopImmediatePropagation();
-          saveBar.classList.add("shake");
-          setTimeout(() => saveBar.classList.remove("shake"), 300);
-        }
+        btn.classList.add("active");
+        document.getElementById(btn.dataset.target).classList.add("active");
       });
     });
   </script>
